# src-site-directory

./: .dockerignore  .env.template  .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  .readthedocs.yml  .release  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Dockerfile.core  MANIFEST.in  Makefile  README.md  TODO.md  cicd.mk  dev.mk  docker-compose.local.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  sonar-project.properties  testing.mk
charts/: scapi
charts/ska-src-site-capabilities-api/: Chart.yaml  values.yaml  values.yaml.template
charts/ska-src-site-capabilities-api/templates/: capabilities-secrets.yaml  core-deployment.yaml  core-ingress.yaml  core-service.yaml  mongo-deployment.yaml  mongo-ingress.yaml  mongo-pvc.yaml  mongo-service.yaml
docs/: Makefile  conf.py  index.rst  readme_link.md  requirements.txt
docs/src/: conf.py  contributing.md  contributing.rst  index.rst  readme.md  readme.rst
docs/src/api/: index.rst  ska_src_template_api.common.rst  ska_src_template_api.model.rst
docs/src/developer_guide/: code_quality.rst
docs/src/getting_started/: getting_started.rst
etc/docker/: init.sh
etc/helm/: Chart.yaml  values.yaml  values.yaml.template
etc/helm/templates/: capabilities-secrets.yaml  core-deployment.yaml  core-ingress.yaml  core-service.yaml  mongo-deployment.yaml  mongo-pvc.yaml  mongo-service.yaml  secrets.yaml
etc/init/: nodes.json  nodes_archived.json  nodes_int.json  sites.json
etc/permissions/: default.json
etc/roles/: default.json
etc/schemas/: compute-service.json  compute.json  core-service.json  country.json  downtime.json  environments.json  global-service.json  local-service.json  node.json  processing-service.json  processing.json  queue.json  service.json  site.json  storage-access-protocol.json  storage-area.json  storage-service.json  storage.json
etc/scripts/: generate-code-samples.sh  generate-openapi-schema.sh  increment-app-version.sh  increment-chart-version.sh
images/scapi-core-integration/: .release  Dockerfile
images/ska-src-site-capabilities-api-core/: Dockerfile
src/site_directory/api/: backend.py
src/site_directory/common/: exceptions.py
src/site_directory/rest/: permissions.py  server.py
src/site_directory/rest/templates/: site.html  visualise.html
src/ska_src_site_capabilities_api/backend/: backend.py  mongo.py
src/ska_src_site_capabilities_api/client/: site_capabilities.py
src/ska_src_site_capabilities_api/common/: constants.py  exceptions.py  utility.py
src/ska_src_site_capabilities_api/db/: backend.py
src/ska_src_site_capabilities_api/models/: __init__.py  compute.py  downtime.py  node.py  processing.py  response.py  schema.py  service.py  site.py  storage.py
src/ska_src_site_capabilities_api/rest/: dependencies.py  logger.py  openapi.py  server.py
src/ska_src_site_capabilities_api/rest/openapi/: openapi.json
src/ska_src_site_capabilities_api/rest/request-code-samples/: Go + Native-compute-get.j2  Go + Native-compute-{compute_id}-get.j2  Go + Native-health-get.j2  Go + Native-schemas-render-{schema}-get.j2  Go + Native-schemas-{schema}-get.j2  Go + Native-services-get.j2  Go + Native-services-types-get.j2  Go + Native-sites-delete.j2  Go + Native-sites-{site}-{version}-delete.j2  Go + Native-sites-{site}-{version}-get.j2  Go + Native-storages-grafana-get.j2  Go + Native-storages-topojson-get.j2  Node + Native-health-get.j2  Node + Native-ping-get.j2  Node + Native-services-get.j2  Node + Native-services-types-get.j2  Node + Native-services-{service_id}-get.j2  Node + Native-sites-get.j2  Node + Native-sites-latest-get.j2  Node + Native-sites-{site}-delete.j2  Node + Native-sites-{site}-get.j2  Node + Native-storage-areas-grafana-get.j2  Node + Native-storages-topojson-get.j2  Node + Native-www-sites-add-{site}-get.j2  Python + Requests-compute-get.j2  Python + Requests-health-get.j2  Python + Requests-ping-get.j2  Python + Requests-schemas-get.j2  Python + Requests-schemas-render-{schema}-get.j2  Python + Requests-services-get.j2  Python + Requests-services-{service_id}-get.j2  Python + Requests-sites-dump-get.j2  Python + Requests-sites-get.j2  Python + Requests-sites-latest-get.j2  Python + Requests-sites-{site}-{version}-get.j2  Python + Requests-storage-areas-get.j2  Python + Requests-storage-areas-topojson-get.j2  Python + Requests-storage-areas-{storage_area_id}-get.j2  Python + Requests-storages-grafana-get.j2  Python + Requests-storages-topojson-get.j2  (+210 more)
src/ska_src_site_capabilities_api/rest/routers/: compute.py  docs.py  nodes.py  queues.py  schemas.py  services.py  sites.py  status.py  storage_areas.py  storages.py
src/ska_src_site_capabilities_api/rest/templates/: docs.html  downtime-statusboard.html  node-report.html  node.html  services-report.html  site.html  topology.html  (+1 more)
tests/: pytest.ini
tests/assets/: nodes.json  nodes_archived.json
tests/assets/integration/: compute_storm1.json  compute_storm2.json  node_storm1.json  node_storm2.json
tests/assets/unit/: nodes.json
tests/component/: COVERAGE_ANALYSIS.md  README.md  RECOMMENDATIONS_ANALYSIS.md  __init__.py  conftest.py  test_compute.py  test_downtime_metrics.py  test_error_handling.py  test_nodes.py  test_queues.py  test_schemas.py  test_services.py  test_site.py  test_sites.py  test_status.py  test_storage_areas.py  test_storages.py  test_web_ui.py
tests/data/: site_versions.py
tests/integration/: conftest.py  test_component_dummy.py  test_compute_apis.py  test_delete_sites.py  test_get_apis.py  test_get_sites_apis.py  test_post_and_delete_sites_apis.py  test_schema_apis.py  test_services_apis.py  test_site_capabilities_api.py  test_sites_apis.py  test_status_apis.py  test_storage_apis.py  test_trigger_delete_api.py
tests/resources/: common_utils.py
tests/test-data/: test_site_version_1.json  test_site_version_2.json
tests/unit/: test_backend.py  test_dummy.py  test_list_services.py  test_storage_areas.py
tests/unit/assets/: nodes.json  nodes_archived.json
tools/: generate-code-samples.sh  generate_contributors.py  migrate_schema.py
(+23 files in other folders)
