[tool.poetry]
name = "ska-src-site-capabilities-api"
version = "0.3.81"
description = "SRCNet Site Capabilities API"
authors = ["Rob Barnsley"]
license = "BSD-3-Clause"
packages = [
    { include = "ska_src_site_capabilities_api", from = "src" }
]
include = [
    { path = 'etc/*'}
]

[tool.setuptools]
packages = ["ska_src_site_capabilities_api"]

[tool.setuptools.scripts]
scripts = [
    "bin/*"
]

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[[tool.poetry.source]]
name = "PyPI-public"
url = 'https://pypi.org/simple'

[[tool.poetry.source]]
name = "authn_api"
url = "https://gitlab.com/api/v4/projects/48376510/packages/pypi/simple"

[[tool.poetry.source]]
name = "permissions_api"
url = "https://gitlab.com/api/v4/projects/48060714/packages/pypi/simple"

[tool.poetry.dependencies]
python = "^3.13"
Authlib = "1.2.0"
fastapi = "^0.124.0"
fastapi-versionizer = "^4.0.0"
httpx = "^0.28.0"
itsdangerous = "2.0.1"
Jinja2 = "3.0.1"
jsonref = "1.1.0"
jsonschema = "3.2.0"
plantuml = "0.3.0"
Markdown = "3.4.4"
pydantic = "^2.10.5"
pymongo = "4.3.3"
Pygments = "2.16.1"
PyJWT = "2.8.0"
python-dateutil = "2.8.2"
attrs = "^23.2.0"
python-multipart = "0.0.6"
requests = "2.26.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
ska-src-permissions-api = "^0.1.92"
ska-src-auth-api = "^0.5.9"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mongomock = "4.3.0"
pylint = "3.1.0"
pylint-junit = "^0.3.2"
coverage = "^6.2"
pytest = "8.3.4"
pytest-cov = "^4.0.0"
pytest-json-report = "^1.4.1"
pytest-forked = "^1.3.0"
pytest-mock = "^3.10.0"
pytest-xdist = "^2.4.0"
pytest-repeat = "^0.9.1"
pytest-order = "1.3.0"

[tool.poetry.group.docs.dependencies]
Sphinx = "^6.1.0"
docutils = "^0.18"
ska-ser-sphinx-theme = "^0.1.1"
sphinx-autodoc-typehints = "^1.19"
myst-parser = "2.0.0"
sphinx-rtd-theme = "1.3.0"
sphinx-autoapi = "3.0.0"
sphinxcontrib-mermaid = "0.9.2"
sphinxcontrib-plantuml = "0.28"
toml = "0.10.2"

[tool.isort]
profile = "black"
line_length = 150

[tool.black]
line-length = 150

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
